<resources>
    <string name="app_name">Senseware</string>
    <string name="action_settings">Settings</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarser">Registrarse</string>
    <string name="title_activity_login">"Iniciar Sesion "</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="password_recovery">¿Olvidaste tu Contraseña?</string>
    <string name="nuevo_proyecto">Nuevo proyecto</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="nuevos_proyectos">Mis proyectos</string>
    <string name="my_history">Mis respuestas</string>


    <!-- Strings related to youtube -->
    <string name="hello_world">Hello world!</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <!-- String errors -->
    <string name="error_required">Este campo es requerido</string>
    <string name="error_email">El email ingresado es invalido</string>
    <string name="error_pswd">Invalida contraseña, no puede contener comillas</string>
    <string name="error_pswd_short">La contraseña es muy corta</string>
    <string name="error_empty_project">El nombre del proyecto no puede estar vacio</string>
    <string name="error_edit_project">No has cambiado el nombre del proyecto</string>
    <string name="clear_cache">Limpiar cache</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
